... and liberal about consumed types